# Geometry

./: CMakeLists.txt  GeoGlobal.h  Geometry2D.cpp  Geometry2D.h  Geometry3D.h  List.h  MathDefs.h  Operation3D.cpp  Operation3D.h  ReadMe.txt  Triangulate.cpp  Triangulate.h  Vector2D.h  Vector2D_float.h  Vector3D.h  Vector3D_float.h
